# onlinerake

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml  tests.yml
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  diagnostics.rst  examples.rst  index.rst  installation.rst  notebooks.rst  quickstart.rst
docs/_autosummary/: onlinerake.OnlineRakingMWU.rst  onlinerake.OnlineRakingSGD.rst  onlinerake.Targets.rst  onlinerake.simulation.DemographicObservation.rst  onlinerake.simulation.analyze_results.rst  onlinerake.simulation.run_simulation_suite.rst
docs/notebooks/: 01_getting_started.ipynb  02_performance_comparison.ipynb  03_advanced_diagnostics.ipynb
docs/tutorials/: index.rst
examples/: __init__.py  ab_test_calibration.py  ad_targeting_calibration.py  diagnostics_demo.py  kl_ipf_comparison.py  real_survey_example.py  realistic_examples.py  recommendation_balancing.py  simulation.py
ms/: generate_fig_age_margin_error.py  online_raking_references.bib  onlinerake.tex  table_main_results.tex
onlinerake/: __init__.py  __main__.py  _utils.py  batch_ipf.py  convergence.py  diagnostics.py  divergence.py  learning_rate.py  model_assisted.py  models.py  online_raking_mwu.py  online_raking_sgd.py  sensitivity.py  simulation.py  streaming_inference.py  targets.py
scripts/: README.md
scripts/eval/: comprehensive_eval.py  plot_eval_results.py  run_experiments.py
scripts/figures/: generate_fig_age_margin_error.py
tests/: test_model_assisted.py  test_mwu_ipf_equivalence.py  test_new_features.py  test_onlinerake.py  test_theoretical_features.py
