[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onlinerake"
version = "0.1.0"
description = "Streaming survey raking via SGD and MWU"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
packages = ["onlinerake"]